[package]
name = "ht32f5xxxx-hal"
version = "0.1.0"
authors = ["Henrik Böving <hargonix@gmail.com>"]
edition = "2018"
categories = ["embedded", "hardware-support", "no-std"]
description = "Hardware Abstraction Layer implementation for HT32H5xxxx series microcontrollers"
keywords = ["arm", "cortex-m", "ht32", "hal", "embedded-hal"]
license = "0BSD"
repository = "https://github.com/ht32-rs/ht32f5xxxx-hal"
documentation = "https://docs.rs/ht32f5xxxx-hal"
readme = "README.md"
exclude = [".gitignore"]

[package.metadata.docs.rs]
features = ["ht32f52342_52", "rt"]
targets = ["thumbv6m-none-eabi"]

[dependencies]
embedded-hal = "0.2.4"
cortex-m = "0.6.3"
cortex-m-rt = "0.6.15"
nb = "0.1.2"
ht32f5xxxx = "0.1.1"

[dependencies.bare-metal]
version = "0.2.5"
features = ["const-fn"]

[dev-dependencies]
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
rtt-target = { version = "0.2.0", features = ["cortex-m"] }

[features]
default = ["unproven"]
unproven = ["embedded-hal/unproven"]
device-selected = []
rt = ["ht32f5xxxx/rt"]
ht32f52342_52 = ["ht32f5xxxx/ht32f52342_52", "device-selected"]

[profile.dev]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size in flash
incremental = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size in flash
lto = true # better optimizations
opt-level = "s" # optimize for binary size
